[gd_scene load_steps=2 format=3 uid="uid://ck2ctuxkk5dj5"]

[ext_resource type="Script" uid="uid://ca6qeg8jyxf3c" path="res://scenes/components/choice_screen/choice_card/choice_card.gd" id="1_ajvia"]

[node name="ChoiceCardContainer" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_ajvia")

[node name="ChoiceButton" type="Button" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(300, 600)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ChoiceButton"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 60.0
offset_right = 240.0
offset_bottom = 39.0
theme_type_variation = &"HeaderLarge"
text = "<choice title>"
horizontal_alignment = 1

[node name="ImageContainer" type="MarginContainer" parent="ChoiceButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_right = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceIcon" type="Sprite2D" parent="ChoiceButton/ImageContainer"]

[node name="EffectsLabel" type="Label" parent="ChoiceButton"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 71.0
offset_top = 265.0
offset_right = 229.0
offset_bottom = 288.0
size_flags_horizontal = 4
theme_type_variation = &"TooltipLabel"
text = "Effects: <effect text>"
horizontal_alignment = 1

[node name="FlavorTextLabel" type="Label" parent="ChoiceButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -23.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"TooltipLabel"
text = "<Flavor text>: \"a generic choice\""
horizontal_alignment = 1
